--- a/wp-ig-components/scss/components/navbars/nav-v3-fspn/custom/fspn-custom.scss
+++ b/wp-ig-components/scss/components/navbars/nav-v3-fspn/custom/fspn-custom.scss
@@ -10,6 +10,8 @@
 
   &__wrapper {
     margin-top: 10em;
+    margin-bottom: 20rem;// this is to help with scroll, change when another sollution is found
+    
     background-color: #253141;
     @include flex-justify-center;
 
