--- a/wp-ig-components/scss/components/navbars/nav-v3-fspn/fspn.scss
+++ b/wp-ig-components/scss/components/navbars/nav-v3-fspn/fspn.scss
@@ -17,7 +17,7 @@
     min-height: 100vh;
     width: 100%;
     transition: visibility 0.7s;
-    overflow-y: scroll;
+    // overflow-y: scroll;
   }
 
   &__wrapper {
