--- a/wp-ig-components/scss/components/buttons/dropdown-arrow-icon/dropdown-arrow-icon.scss
+++ b/wp-ig-components/scss/components/buttons/dropdown-arrow-icon/dropdown-arrow-icon.scss
@@ -12,7 +12,6 @@ $duration: 0.5s;
   width: 25px;
   display:block;
   padding: 0;
-//   margin: 1em auto;
   position: relative;
   cursor: pointer;
   border-radius: 4px;
@@ -78,4 +77,12 @@ $duration: 0.5s;
 
 }
 
+.ig-dropdown-arrow-icon:hover >  .ig-dropdown-arrow-icon__left-bar:after {
+  transform-origin: center center;
+      transform: rotate(-70deg);
+}
 
+.ig-dropdown-arrow-icon:hover > .ig-dropdown-arrow-icon__right-bar:after {
+  transform-origin: center center;
+      transform: rotate(70deg);
+}
