added btn close in and out

--- a/wp-ig-components/scss/components/buttons/buttons.scss
+++ b/wp-ig-components/scss/components/buttons/buttons.scss
@@ -2,3 +2,4 @@
 @import './btn-hamburger/btn-hamburger__general.scss';
 @import './btn-hamburger/btn-hamburger__arrow-and-ring.scss';
 @import './btn-hamburger/btn-hamburger__middle-patty-sliding-off.scss';
+@import './btn-close/btn-close__in-and-out.scss';
