working on button with arrow icon

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,3 +37,6 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import "./pages/homepage/homepage";
 @import "./pages/web-constructor/web-constructor";
 
+
+@import '../../wp-ig-components/scss/components/buttons/btnc/btnc.scss';
+@import '../../wp-ig-components/scss/components/buttons/btnc/options/hover/hover__arrows';
