--- a/wp-ig-components/scss/components/buttons/btnc/btnc.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/btnc.scss
@@ -11,9 +11,9 @@
   border: 1px solid black;
   background-color: transparent;
   padding: 0.375rem 0.75rem;
-  border-radius: 0.25rem;
+  border-radius: 8px;
   margin: 0.25rem 0.125rem;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 
   &:hover {
     opacity: 0.67;
@@ -34,28 +34,37 @@
   opacity: 0.65;
 }
 
-
 //=============================SIZES==================================
-
-.btnc--lg {
-  padding: 0.5rem 1rem;
-  font-size: 1.25rem;
-  border-radius: 0.3rem;
-}
 
 .btnc--sm {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
-  border-radius: 0.2rem;
 }
 
+.btnc--lg {
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+}
 
-
-
-
+.btnc--xl {
+  padding: 0.5rem 0.75rem;
+  font-size: 1.5rem;
+}
 
 //=========================SHAPES==============================
 
 .btnc--square {
   border-radius: 0;
+}
+
+.btnc--pill {
+  border-radius: 40px;
+}
+
+.btnc--circle {
+  border-radius: 50%;
+  height: 2.5em;
+  width: 2.5em;
+  white-space: nowrap;
+  padding: 0;
 }
