added btn close gudzyk

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,3 +40,4 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 
 @import '../../wp-ig-components/scss/components/buttons/btnc/btnc.scss';
 @import '../../wp-ig-components/scss/components/buttons/btnc/options/hover/hover__arrows';
+@import '../../wp-ig-components/scss/components/buttons/btn-close/btn-close__gudzyk.scss';
