--- a/wp-ig-components/scss/components/buttons/btnc/options/hover/hover__arrows.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/options/hover/hover__arrows.scss
@@ -1,12 +1,34 @@
 .btnc--h__arrow-right {
-    padding: .5rem 2rem;
-    &:after {
-        display: inline-flex;
-        content: '';
-        // background-image: url('');
-        background-size: 40px 40px;
-        height: 40px;
-        width: 40px;
-    }
+  padding: 0.5rem 3rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  &:after {
+  transition: all .35s ease;
 
+    // display: inline-flex;
+// justify-content: center;
+// align-items: center;
+    content: "";
+
+    background-size: 2rem 2rem;
+    height: 2rem;
+    width: 2rem;
+    position: relative;
+   transform: translateX(300%);
+    position:absolute;
+    // top: 0; left: 0;
+    // text-align: center;
+    // height: 40px;
+    // width: 40px;
+  }
+  &:hover:after {
+    transform: translateX(140%);
+    opacity: .65;
+  }
+}
+.arrow {
+    fill: green;
 }
