--- a/wp-ig-components/scss/components/buttons/btnc/options/hover/hover__arrows.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/options/hover/hover__arrows.scss
@@ -1,3 +1,6 @@
+//===================================ARROW RIGHT==================================
+
+
 .btnc--h__arrow-right {
   padding: 0.5rem 3rem;
   position: relative;
@@ -14,18 +17,16 @@
     font-size: 3rem;
     fill: inherit;
   }
-
-
 }
 
 .btnc--h__arrow-right--rl {
-    & svg {
-        transform: translateX(140%);
-    }
+  & svg {
+    transform: translateX(140%);
+  }
 
-    &:hover svg {
-        transform: translateX(0);
-      }
+  &:hover svg {
+    transform: translateX(0);
+  }
 }
 
 .btnc--h__arrow-right--lr {
@@ -41,16 +42,49 @@
     opacity: 1;
   }
 }
-.btnc--h__arrow-right--reverse {
-  & svg {
-    transition: all 0.1s ease-in;
 
-    transform: translateX(-80%);
-    opacity: 0;
-  }
+//==================================ARROW LEFT================================
 
-  &:hover svg {
-    transform: translateX(0);
-    opacity: 1;
+.btnc--h__arrow-left {
+    padding: 0.5rem 3rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  
+    & svg {
+    transform: rotate(180deg);
+
+      transition: all 0.2s ease-in;
+      width: 30px;
+      position: absolute;
+      left: 7%;
+      font-size: 3rem;
+      fill: inherit;
+    }
   }
-}
+  
+  .btnc--h__arrow-left--rl {
+    & svg {
+      transform: rotate(180deg) translateX(140%);
+    }
+  
+    &:hover svg {
+      transform:  rotate(180deg) translateX(0);
+    }
+  }
+  
+  .btnc--h__arrow-left--lr {
+    & svg {
+      transition: all 0.1s ease-in;
+  
+      transform:  rotate(180deg)  translateX(-140%);
+      opacity: 0;
+    }
+  
+    &:hover svg {
+      transform:  rotate(180deg)  translateX(0);
+      opacity: 1;
+    }
+  }
