added button with icon

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,3 +41,4 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import '../../wp-ig-components/scss/components/buttons/btnc/btnc.scss';
 @import '../../wp-ig-components/scss/components/buttons/btnc/options/hover/hover__arrows';
 @import '../../wp-ig-components/scss/components/buttons/btn-close/btn-close__gudzyk.scss';
+@import '../../wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc__with-icons.scss'
