--- a/wp-ig-components/scss/components/buttons/btnc/btnc.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/btnc.scss
@@ -1,7 +1,9 @@
 //================================BASE===========================
 
 .btnc {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   line-height: 1.5;
   text-align: center;
   text-decoration: none;
