--- a/wp-ig-components/scss/components/buttons/btnc/btnc.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/btnc.scss
@@ -1,4 +1,5 @@
 //================================BASE===========================
+@import "../../../mixins/mixins";
 
 .btnc {
   display: inline-flex;
@@ -15,14 +16,14 @@
   padding: 0.375rem 0.75rem;
   border-radius: 8px;
   margin: 0.25rem 0.125rem;
-  transition: all 0.15s ease-in-out;
+  transition: opacity 0.15s ease-in-out;
+  position: relative;
 
   &:hover {
     opacity: 0.67;
   }
   &:focus {
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(var(--color-brand), 0.25);
+    @include outline;
   }
 
   &:active {
