added btn icon push

--- a/wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc_with-icon-on-bg.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc_with-icon-on-bg.scss
@@ -90,5 +90,24 @@
         }
     }
   }
+
+  &--line-only {
+      &:after {
+
+          background-color: transparent;
+          opacity: .3;
+          border-left: solid 2px currentColor;
+
+      }
+
+      &.btnc__with-icon-on-bg--start {
+
+        &:after {
+            border-left: none;
+            border-right: solid 2px currentColor;
+        }
+
+      }
+  }
 }
 
