--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,4 +44,5 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import '../../wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc__with-icons.scss';
 @import '../../wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc_with-icon-on-bg.scss';
 @import '../../wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc__icon-push';
+@import '../../wp-ig-components/scss/components/buttons/btnc/options/btnc__outline/btnc__outline.scss';
 
