added extra utils

--- a/wp-ig-components/scss/basics/utility-classes.scss
+++ b/wp-ig-components/scss/basics/utility-classes.scss
@@ -1,3 +1,34 @@
+///////////////////////////////////////////////=================OVERFLOW=================//////////////////////////////////
 .ig-oYa {
     overflow-y: auto;
 }
+
+.ig-oYh {
+    overflow-y: hidden;
+}
+
+.ig-oYs {
+    overflow-y: scroll;
+}
+
+.ig-oYv {
+    overflow-y: visible;
+}
+
+
+.ig-oXa {
+    overflow-x: auto;
+}
+
+.ig-oXh {
+    overflow-x: hidden;
+}
+
+.ig-oXs {
+    overflow-x: scroll;
+}
+
+.ig-oXv {
+    overflow-x: visible;
+}
+
