--- a/wp-ig-components/scss/components/buttons/btnc/options/btnc__outline/btnc__outline.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/options/btnc__outline/btnc__outline.scss
@@ -3,11 +3,11 @@
     font-size: 1.2rem;
     text-transform: uppercase;
     color: white;
-    background-color: black;
+    background-color: transparent;
     transition: color .2s ease-in-out, background-color .2s ease-in-out;
     &--h-invert {
         &:hover {
-color: black;
+color: inherit;
 background-color: white;
 opacity: 1;
 border: solid 1px transparent;
