--- a/wp-ig-components/scss/components/buttons/btnc/options/btnc__outline/btnc__outline.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/options/btnc__outline/btnc__outline.scss
@@ -1,5 +1,4 @@
 .btnc__outline {
-    padding: .7em 2.4em;
     font-size: 1.2rem;
     text-transform: uppercase;
     color: white;
@@ -13,5 +12,28 @@ opacity: 1;
 border: solid 1px transparent;
         }
     }
+
+    &.btnc--sm {
+        padding: 0.45em 1.5em;
+    }
+
+    &.btnc {
+        padding: .7em 1.75em;
+    }
+
+
+    &.btnc--lg {
+        padding: 1em 2em;
+
+    }
+
+    &.btnc--xl {
+        padding: 1.25em 2.25em;
+    }
+    &.btnc--xxl {
+        padding: 1.5em 2.5em;
+    }
+
+
 }
 
