--- a/wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc__with-icons.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc__with-icons.scss
@@ -4,6 +4,10 @@
     margin-left: 15px;
     fill: currentColor;
   }
+  &.btnc--xxl {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 .btnc__with-icon--before {
   & svg {
