--- a/wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc__icon-push.scss
+++ b/wp-ig-components/scss/components/buttons/btnc/options/btnc__with-icons/btnc__icon-push.scss
@@ -14,6 +14,7 @@
     }
 
     &:hover {
+        opacity: .9;
 
         & span {
 
@@ -23,6 +24,9 @@
         & svg {
             transform: translate(-50%, 0);
         }
+    }
+    &:focus {
+        opacity: 1;
     }
 }
 
