--- a/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__middle-patty-sliding-off.scss
+++ b/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__middle-patty-sliding-off.scss
@@ -1,18 +1,22 @@
 $patty-color: black;
-$patty-color-active-state: gray;
+$patty-color-active-state: white;
+
+@import '../../../mixins/mixins';
+
 
 .btn-hamburger__middle-patty-sliding-off {
   position: absolute;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   cursor: pointer;
   background: transparent;
-  border-radius: 50%;
+  // border-radius: 50%;
   border: none;
   outline: none;
+  transition: opacity .2s linear;
 
   & span {
     position: absolute;
@@ -35,6 +39,7 @@ $patty-color-active-state: gray;
       background: $patty-color-active-state;
       transition: all 0.3s linear;
     }
+    
     &:nth-child(1) {
       animation: span-first-off 0.5s ease-in-out;
       animation-fill-mode: forwards;
@@ -49,10 +54,19 @@ $patty-color-active-state: gray;
       animation-fill-mode: forwards;
     }
   }
+
+  &:hover {
+    opacity: .8;
+  }
+
+  &:focus {
+    @include outline;
+    opacity: 1;
+  }
 }
 
 .btn-hamburger__middle-patty-sliding-off.btn-hamburger-middle-sliding-off--active {
-  &:hover span::before {
+  & span::before {
     width: 100%;
     transition: all 0.3s linear;
   }
