--- a/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__general.scss
+++ b/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__general.scss
@@ -19,7 +19,12 @@
     }
   
     &:hover {
-      opacity: 0.7;
+      opacity: 0.8;
+    }
+
+    &:focus {
+      @include outline;
+      opacity: 1;
     }
   
     span {
@@ -28,7 +33,7 @@
       width: 100%;
       position: absolute;
       top: 0px;
-      background: var(--color-white);
+      background-color: white;
       left: 0;
       transition: all 0.35s ease;
       cursor: pointer;
@@ -45,15 +50,15 @@
     &--active {
       span {
         transform: translateY(10px) translateX(0) rotate(45deg);
-        background: var(--color-white);
+        background-color: white;
         &:nth-of-type(2) {
           opacity: 0;
-          background: var(--color-white);
+          background-color: white;
         }
   
         &:nth-of-type(3) {
           transform: translateY(-10px) translateX(0) rotate(-45deg);
-          background: var(--color-white);
+          background-color: white;
         }
       }
     }
