--- a/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__middle-patty-sliding-off.scss
+++ b/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__middle-patty-sliding-off.scss
@@ -23,7 +23,7 @@ $patty-color-active-state: white;
     height: 4px;
     top: 50%;
     left: 50%;
-    background-color: $black;
+    background-color: $patty-color;
     border-radius: 2px;
     overflow: hidden;
     transition: all 0.3s linear;
