--- a/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__general.scss
+++ b/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__general.scss
@@ -1,6 +1,11 @@
 @import '../../../mixins/mixins';
 
 .btn-hamburger__general {
+--btn-hamburger-general: white;
+--btn-hamburger-general-active: lightgray;
+}
+
+.btn-hamburger__general {
 
     position: fixed;
     top: 5%;
@@ -33,7 +38,7 @@
       width: 100%;
       position: absolute;
       top: 0px;
-      background-color: white;
+      background-color: var(--btn-hamburger-general);
       left: 0;
       transition: all 0.35s ease;
       cursor: pointer;
@@ -50,15 +55,15 @@
     &--active {
       span {
         transform: translateY(10px) translateX(0) rotate(45deg);
-        background-color: white;
+        background-color: var(--btn-hamburger-general-active);
         &:nth-of-type(2) {
           opacity: 0;
-          background-color: white;
+          background-color: var(--btn-hamburger-general-active);
         }
   
         &:nth-of-type(3) {
           transform: translateY(-10px) translateX(0) rotate(-45deg);
-          background-color: white;
+          background-color: var(--btn-hamburger-general-active);
         }
       }
     }
