--- a/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__middle-patty-sliding-off.scss
+++ b/wp-ig-components/scss/components/buttons/btn-hamburger/btn-hamburger__middle-patty-sliding-off.scss
@@ -1,5 +1,9 @@
-$patty-color: black;
-$patty-color-active-state: white;
+
+.btn-hamburger__middle-patty-sliding-off{
+  --btn-hamburger-middle-sliding-off: black;
+  --btn-hamburger-middle-sliding-off-active: white;
+}
+
 
 @import '../../../mixins/mixins';
 
@@ -23,7 +27,7 @@ $patty-color-active-state: white;
     height: 4px;
     top: 50%;
     left: 50%;
-    background-color: $patty-color;
+    background-color: var(--btn-hamburger-middle-sliding-off);
     border-radius: 2px;
     overflow: hidden;
     transition: all 0.3s linear;
@@ -35,7 +39,7 @@ $patty-color-active-state: white;
       height: 100%;
       top: 0;
       right: 0;
-      background-color: $patty-color-active-state;
+      background-color: var(--btn-hamburger-middle-sliding-off-active);
       transition: all 0.3s linear;
     }
     
@@ -113,7 +117,7 @@ $patty-color-active-state: white;
     transform: translate(-50%, -50%);
   }
   25% {
-    background-color: $patty-color-active-state;
+    background-color: var(--btn-hamburger-middle-sliding-off-active);
   }
   50% {
     transform: translate(-50%, -50%) scale(1);
@@ -127,7 +131,7 @@ $patty-color-active-state: white;
     transform: translate(-150%, -50%) scale(0);
   }
   25% {
-    background-color: $patty-color-active-state;
+    background-color: var(--btn-hamburger-middle-sliding-off-active);
   }
   50% {
     transform: translate(-50%, -50%) scale(1);
