--- a/wp-ig-components/scss/components/buttons/dropdown-arrow-icon/dropdown-arrow-icon.scss
+++ b/wp-ig-components/scss/components/buttons/dropdown-arrow-icon/dropdown-arrow-icon.scss
@@ -1,12 +1,17 @@
 $easing: cubic-bezier(.25,1.7,.35,.8);
 $duration: 0.5s;
 
-.ig-dropdown-arrow-icon-noHover{
+.btn-dropdown__triangle-outline {
+--btn-dropdown-triangle-outline-color: white;
+
+}
+
+.btn-dropdown__triangle-outline-noHover{
     pointer-events: none;
 }
 
 
-.ig-dropdown-arrow-icon {
+.btn-dropdown__triangle-outline {
   background-color: transparent;
   height: 15px;
   width: 25px;
@@ -17,7 +22,7 @@ $duration: 0.5s;
   border-radius: 4px;
 }
 
-.ig-dropdown-arrow-icon__left-bar {
+.btn-dropdown__triangle-outline__left-bar {
   position: absolute;
   background-color: transparent;
   top: 0;
@@ -30,7 +35,7 @@ $duration: 0.5s;
   border-radius: 2px;
   &:after {
     content:"";
-    background-color: white;
+    background-color: var(--btn-dropdown-triangle-outline-color);
     width: 13px;
     height: 5px;
     display: block;
@@ -41,7 +46,7 @@ $duration: 0.5s;
   }
 }
 
-.ig-dropdown-arrow-icon__right-bar {
+.btn-dropdown__triangle-outline__right-bar {
   position: absolute;
   background-color: transparent;
   top: 4px;
@@ -54,7 +59,7 @@ $duration: 0.5s;
   border-radius: 2px;
   &:after {
     content:"";
-    background-color: white;
+    background-color: var(--btn-dropdown-triangle-outline-color);
     width: 13px;
     height: 5px;
     display: block;
@@ -65,24 +70,24 @@ $duration: 0.5s;
   }
 }
 
-.ig-dropdown-arrow-icon__open {
-    .ig-dropdown-arrow-icon__left-bar:after {
+.btn-dropdown__triangle-outline__open {
+    .btn-dropdown__triangle-outline__left-bar:after {
     transform-origin: center center;
     transform: rotate(-70deg);
   }
-  .ig-dropdown-arrow-icon__right-bar:after {
+  .btn-dropdown__triangle-outline__right-bar:after {
     transform-origin: center center;
     transform: rotate(70deg);
   }
 
 }
 
-.ig-dropdown-arrow-icon:hover >  .ig-dropdown-arrow-icon__left-bar:after {
+.btn-dropdown__triangle-outline:hover >  .btn-dropdown__triangle-outline__left-bar:after {
   transform-origin: center center;
       transform: rotate(-70deg);
 }
 
-.ig-dropdown-arrow-icon:hover > .ig-dropdown-arrow-icon__right-bar:after {
+.btn-dropdown__triangle-outline:hover > .btn-dropdown__triangle-outline__right-bar:after {
   transform-origin: center center;
       transform: rotate(70deg);
 }
