adjusted btn close in and out

--- a/wp-ig-components/scss/components/buttons/btn-close/btn-close__in-and-out.scss
+++ b/wp-ig-components/scss/components/buttons/btn-close/btn-close__in-and-out.scss
@@ -1,12 +1,10 @@
-// body {
-//     background: #121212;
-//   }
-  
 $button-size: 40px;
 $close-width: ($button-size / 10);
-$color__btn: black;
 
 
+.btn-close__in-and-out {
+--btn-close-in-and-out-color: black;
+}
 .btn-close__in-and-out {
   display: inline-block;
   width: $button-size;
@@ -31,7 +29,7 @@ $color__btn: black;
       width: 4px;
       height: 25px;
       transform-origin: bottom center;
-      background: $color__btn;
+      background: var(--btn-close-in-and-out-color);
       transition: all ease-out 280ms;
     }
     &:last-of-type {
