--- a/wp-ig-components/scss/states/hover/hover-uncat/hov__rails.scss
+++ b/wp-ig-components/scss/states/hover/hover-uncat/hov__rails.scss
@@ -1,25 +1,25 @@
-.btnc__h--rails {
-    --btnc-h-rails-rail-color: #fff;
+.hov__rails {
+    --hov-rails-rail-color: #fff;
 }
 
-.btnc__h--rails {
+.hov__rails {
   position: relative;
   flex-direction: column;
   letter-spacing: 0;
   transition: letter-spacing .2s ease-in;
 }
 
-.btnc__h--rails:hover,
-.btnc__h--rails:active {
+.hov__rails:hover,
+.hov__rails:active {
   letter-spacing: 5px;
   opacity: 1;
 
 }
 
-.btnc__h--rails:after,
-.btnc__h--rails:before {
+.hov__rails:after,
+.hov__rails:before {
   backface-visibility: hidden;
-  border: 1px solid var(--btnc-h-rails-rail-color);
+  border: 1px solid var(--hov-rails-rail-color);
   bottom: 0px;
   content: " ";
   display: block;
@@ -31,22 +31,22 @@
   visibility: hidden
 }
 
-.btnc__h--rails:hover:after,
-.btnc__h--rails:hover:before {
+.hov__rails:hover:after,
+.hov__rails:hover:before {
   backface-visibility: hidden;
-  border-color: var(--btnc-h-rails-rail-color);
+  border-color: var(--hov-rails-rail-color);
   transition: width 350ms ease-in-out;
   text-align: center;
   width: 100%;
   visibility: visible;
 }
 
-.btnc__h--rails:hover:before {
+.hov__rails:hover:before {
   bottom: auto;
   top: 0;
   width: 100%;
 }
-.btnc__h--rails:hover:after {
+.hov__rails:hover:after {
   bottom: auto;
   top: 0;
   width: 100%;
