updated all hov-l to give same effect on focus as on hover

--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__b-corners.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__b-corners.scss
@@ -35,13 +35,15 @@
     border-bottom: var(--hov-l-b-corners-corner-thickness) solid var(--hov-l-b-corners-corner-color);
   }
 
-  &:hover.hov-l__b-corners:before, &:focus.hov-l__b-corners:before {
+  &:hover.hov-l__b-corners:before,
+  &:focus.hov-l__b-corners:before {
     opacity: 1;
     right: var(--hov-l-b-corners-corner-distance);
     top: var(--hov-l-b-corners-corner-distance);
   }
 
-  &:hover.hov-l__b-corners:after, &:focus.hov-l__b-corners:after {
+  &:hover.hov-l__b-corners:after,
+  &:focus.hov-l__b-corners:after {
     opacity: 1;
     left: var(--hov-l-b-corners-corner-distance);
     bottom: var(--hov-l-b-corners-corner-distance);
@@ -74,12 +76,14 @@
     }
   }
 
-  &:hover, &:focus span:before {
+  &:hover span:before,
+  &:focus span:before {
     opacity: 1;
     left: var(--hov-l-b-corners-corner-distance);
     top: var(--hov-l-b-corners-corner-distance);
   }
-  &:hover, &:focus span:after {
+  &:hover span:after,
+  &:focus span:after {
     opacity: 1;
     right: var(--hov-l-b-corners-corner-distance);
     bottom: var(--hov-l-b-corners-corner-distance);
