--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__bx.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__bx.scss
@@ -29,7 +29,8 @@
     transform: translateY(var(--hov-l-bx-border-distance));
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       opacity: 0.7;
       transform: rotate(45deg);
