--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__text-transform-and-bb.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__text-transform-and-bb.scss
@@ -29,7 +29,8 @@
     pointer-events: none;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       opacity: 0;
       transform: translateY(-2px);
