--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__b-full-zt.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__b-full-zt.scss
@@ -27,7 +27,8 @@
     transform: translateY(-7px) translateX(6px);
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       opacity: 0;
       transform: translateY(5px) translateX(-5px);
