--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__bb-up.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__bb-up.scss
@@ -18,7 +18,7 @@
     transform: translateY(10px);
   }
 
-  &:hover {
+  &:hover, &:focus {
     &::after {
       transform: translateY(0px);
       opacity: 1;
