--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__bbr-up.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__bbr-up.scss
@@ -4,29 +4,27 @@
 
 .hov-l__bbr-up {
   position: relative;
-  &:before {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: var(--hov-l-bbr-up-color);
-    content: "";
-    transition: top 0.3s;
-  }
-
+  &:before,
   &:after {
     position: absolute;
     bottom: 0;
+    height: 2px;
+    background-color: var(--hov-l-bbr-up-color);
+    content: "";
+  }
+  &:before {
+    left: 0;
+    width: 100%;
+    transition: top 0.3s;
+  }
+  &:after {
     right: 0;
     width: 2px;
-    height: 2px;
-    background: var(--hov-l-bbr-up-color);
-    content: "";
     transition: height 0.3s;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       opacity: 1;
     }
