--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__bbt-up.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__bbt-up.scss
@@ -5,7 +5,8 @@
 
 .hov-l__bbt-up {
   position: relative;
-  &:before {
+  &:before,
+  &:after {
     position: absolute;
     top: 100%;
     left: 0;
@@ -17,21 +18,14 @@
     transition: transform 0.3s;
     transform: scale(0.85);
   }
+
   &:after {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: var(--hov-l-bbt-up-color);
-    content: "";
-    transition: transform 0.3s;
-    transform: scale(0.85);
     opacity: 0;
     transition: top 0.3s, opacity 0.3s, transform 0.3s;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       transform: scale(1);
     }
