--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__bld-down.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__bld-down.scss
@@ -4,29 +4,27 @@
 
 .hov-l__bld-down {
   position: relative;
-  &:before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: var(--hov-l-bld-down-color);
-    content: "";
-    transition: top 0.3s;
-  }
-
+  &:before,
   &:after {
     position: absolute;
     top: 0;
     left: 0;
-    width: 2px;
     height: 2px;
-    background: var(--hov-l-bld-down-color);
+    background-color: var(--hov-l-bld-down-color);
     content: "";
+  }
+
+  &:before {
+    width: 100%;
+    transition: top 0.3s;
+  }
+  &:after {
+    width: 2px;
     transition: height 0.3s;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       top: 100%;
       opacity: 1;
