--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__btb-down.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__btb-down.scss
@@ -5,7 +5,7 @@
 
 .hov-l__btb-down {
   position: relative;
-  &:before {
+  &:before, &:after {
     position: absolute;
     bottom: 100%;
     left: 0;
@@ -18,20 +18,12 @@
     transform: scale(0.85);
   }
   &:after {
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: var(--hov-l-btb-down-color);
-    content: "";
-    transition: transform 0.3s;
-    transform: scale(0.85);
     opacity: 0;
     transition: bottom 0.3s, opacity 0.3s, transform 0.3s;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       transform: scale(1);
     }
