--- a/wp-ig-components/scss/states/hover/hover-links/hov-l__text-shrink.scss
+++ b/wp-ig-components/scss/states/hover/hover-links/hov-l__text-shrink.scss
@@ -11,7 +11,8 @@
     transition: transform 0.3s, opacity 0.3s;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     &:before {
       transform: scale(0.9);
       opacity: 0;
