renamed 2d btn hovers

--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x-bottom.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x-bottom.scss
@@ -1,4 +1,4 @@
-.hov__shake-x-bottom {
+.hov-b__shake-x-bottom {
     transform-origin: 100% 0;
     &:hover {
         animation: hover-shake-x-bottom 1s ease-in-out 1;
