--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__up.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__up.scss
@@ -1,9 +1,9 @@
-.hov__down {
+.hov-b__up {
   transition: transform 0.2s ease-in;
   &:hover {
-    transform: translateY(8px);
+    transform: translateY(-8px);
   }
   &:active {
-    transform: scale(0.9);
+    transform: scale(1.1);
   }
 }
