--- a/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x-top.scss
+++ b/wp-ig-components/scss/components/buttons/states/hover/2d/hov-b__shake-x-top.scss
@@ -1,4 +1,4 @@
-.hov__shake-x-top {
+.hov-b__shake-x-top {
     transform-origin: 0 100%;
     &:hover {
         animation: hover-shake-x-top 1s ease-in-out 1;
